Changelog
=========

1.0b22 - Unreleased
-------------------

* Fix timeout decorator to work ttw.
  [hannosch, witsch]

* Add "z3c.autoinclude.plugin" entry point, so in Plone 3.3+ you can avoid
  loading the ZCML file.
  [hannosch]


1.0b21 - Released February 11, 2010
-----------------------------------

* Fix unindexing to not fetch more data from the objects than necessary.
  [witsch]

* Use decorator to lock timeouts and make sure the lock is always released.
  [witsch]

* Fix maintenance views to work without setting up a Solr connection first.
  [witsch]


1.0b20 - Released January 26, 2010
----------------------------------

* Fix reindexing to always provide data for all fields defined in the schema
  as support for "updateable/modifiable documents" is only planned for Solr
  1.5.  See https://issues.apache.org/jira/browse/SOLR-139 for more info.
  [witsch]

* Fix CSS issues regarding facet display on IE6.
  [witsch]


1.0b19 - Released January 24, 2010
----------------------------------

* Fix partial reindexing to preserve data for indices that are not stored.
  [witsch]

* Help with improved logging of auto-flushes for easier performance tuning.
  [witsch]


1.0b18 - Released January 23, 2010
----------------------------------

* Work around layout issue regarding facet counts on IE6.
  [witsch]


1.0b17 - Released January 21, 2010
----------------------------------

* Don't confuse pre-configured filter queries with facet selections.
  [witsch]

* Always display selected facets, even, or especially, without search results.
  [witsch]


1.0b16 - Released January 11, 2010
----------------------------------

* Remove `catalogSync` maintenance view since it would need to fetch
  additional data (for non-stored indices) from the objects themselves in
  order to work correctly.
  [witsch]

* Fix `reindex` maintenance view to preserve data that cannot be fetched from
  Solr during partial indexing, i.e. indices that are not stored.
  [witsch]
