@@ -1,5 +1,4 @@
 from zope.interface import Interface
-from Products.CMFPlone.CatalogTool import registerIndexableAttribute
 from plone.indexer import indexer
 
 
@@ -27,6 +26,10 @@ parentPathsIndexer = indexer(Interface)(parentPaths)
 
 
 def registerAttributes():
-    registerIndexableAttribute('physicalPath', physicalPath)
-    registerIndexableAttribute('physicalDepth', physicalDepth)
-    registerIndexableAttribute('parentPaths', parentPaths)
+    try:
+        from Products.CMFPlone.CatalogTool import registerIndexableAttribute
+        registerIndexableAttribute('physicalPath', physicalPath)
+        registerIndexableAttribute('physicalDepth', physicalDepth)
+        registerIndexableAttribute('parentPaths', parentPaths)
+    except ImportError:
+        pass
